Sat, 15 Sep 2007 16:22:28 +0200 <thp@perli.net>
New LocalDB using DOM (removes python-xml dependency); channel context menu

	* bin/gpodder: Don't check for xml.sax package and modules anymore, as
	the dependency on python-xml has been removed with this release
	* data/gpodder.glade: Remove the "info" button for the current channel
	* src/gpodder/gui.py: Remove localdb-related code and adopt code for
	new LocalDB code; add context menu to channel navigator (edit/delete)
	* src/gpodder/libipodsync.py: Don't import "liblocaldb" module
	* src/gpodder/liblocaldb.py: Removed
	* src/gpodder/liblocdbreader.py: Removed
	* src/gpodder/liblocdbwriter.py: Removed
	* src/gpodder/liblogger.py: Add "traceback" keyword argument to the
	log() function; if "True" and in debugging mode, print traceback
	* src/gpodder/libpodcasts.py: Merge code from old liblocaldb and
	liblocdbreader/liblocdbwriter to this module as LocalDBWriter and
	LocalDBReader; customize podcastChannel to new LocalDB code
	* src/gpodder/libwget.py: Remove localdb-specific code (now obsolete)

Wed, 12 Sep 2007 23:07:23 +0200 <thp@perli.net>
Fix a bug when traversing directories with loop symlinks

	* src/gpodder/util.py: Don't dive into subdirectories that are
	symbolic links, this is to avoid a situation where looping symlinks
	result in the function dead-locking in a endless recursive loop,
	thanks to Bjørn Rasmussen <bjoernr@sensewave.com> for pointing that
	out and providing the necessary bug report to fix this issue

Sun, 09 Sep 2007 18:47:20 +0200 <thp@perli.net>
Mark episodes as downloaded/deleted when deleting episodes

	* src/gpodder/gui.py: Rename "Mark [...] as downloaded" to "Mark [...]
	as deleted" and mark episodes as downloaded when removing selected
	episodes that have not been downloaded yet, as suggested by Holger
	Leskien <holger leskien.com>
	* src/gpodder/libpodcasts.py: Fix problem when trying to delete
	episodes that have not been downloaded

Sat, 08 Sep 2007 16:45:21 +0200 <thp@perli.net>